fix KoTextWriter::saveParagraph(...) to not crash on QTextDocuments without a KoTextRangeManager

REVIEW: 108868

BUG: 314676

thanks boemann for review